Update - ID google analytics

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Planeje Para Viver - Diagnóstico Financeiro Gratuito</title>
     
     <!-- Google Analytics - SUBSTITUA SEU-ID-AQUI pelo seu ID do GA -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=SEU-ID-AQUI"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-06KNXKLQ4V"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
@@ -799,4 +799,5 @@
         ReactDOM.render(<DiagnosticApp />, document.getElementById('app'));
     </script>
 </body>
+
 </html>
