Update - ID google analytics v2

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-        gtag('config', 'SEU-ID-AQUI');
+        gtag('config', 'G-06KNXKLQ4V');
     </script>
     
     <script src="https://cdn.tailwindcss.com"></script>
@@ -801,3 +801,4 @@
 </body>
 
 </html>
+
