--- a/index.html
+++ b/index.html
@@ -634,7 +634,7 @@
                             <div className="mt-12 pt-8 border-t border-gray-200 text-center">
                                 <div className="text-2xl mb-3">🌿</div>
                                 <p className="text-xl font-bold text-gray-800 mb-1">
-                                    "Não sobreviva. Viva."
+                                    "Planeje para viver o que realmente importa"
                                 </p>
                                 <p className="text-sm text-gray-600 mb-4">
                                     Diagnóstico criado por <strong>Mara Alves</strong><br />
@@ -652,7 +652,7 @@
                                     </a>
                                 </div>
                                 <p className="text-xs text-gray-500 mt-4">
-                                    © 2024 Planeje Para Viver • Baseado em pesquisas de Daniel Kahneman e Richard Thaler
+                                    © 2025 Planeje Para Viver • Baseado em pesquisas de Daniel Kahneman e Richard Thaler
                                 </p>
                             </div>
                         </div>
@@ -788,7 +788,7 @@
                                 fazem você gastar mais do que deveria e sabotar seus próprios objetivos.
                             </p>
                             <p className="text-xs text-gray-500 italic">
-                                ⏱️ Tempo estimado: 10-15 minutos • 🔒 Suas respostas são privadas e não são salvas
+                                ⏱️ Tempo estimado: 5-10 minutos • 🔒 Suas respostas são privadas e não são salvas
                             </p>
                         </div>
                     </div>
@@ -801,4 +801,5 @@
 </body>
 
 </html>
+
 
